# keldy

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Jenkinsfile  LICENSE.txt  README.md  install_instruct.txt  install_triqs.sh  requirements.txt  tmp
.github/ISSUE_TEMPLATE/: bug.md  feature.md
c++/keldy/: CMakeLists.txt  binner.cpp  binner.hpp  common.cpp  common.hpp  contour_integral.hpp  det_expansion.hpp  integrator.hpp  qrng.hpp  toto.cpp  toto.hpp
c++/keldy/app4triqs/: app4triqs.hpp
c++/keldy/impurity_oneband/: compute_obs.cpp  compute_obs.hpp  integrand_spin_plus_spin_minus_freq.cpp  integrand_spin_plus_spin_minus_freq.hpp  model.cpp  model.hpp  wick_direct.cpp  wick_direct.hpp  wick_direct_time.cpp  wick_direct_time.hpp  wick_kernel.cpp  wick_kernel.hpp  wick_kernel_single_omega.cpp  wick_kernel_single_omega.hpp
c++/keldy/interfaces/: cuba_interface.cpp  cuba_interface.hpp  gsl_filter_gaussian_wrap.hpp  gsl_fit_linear_wrap.hpp  gsl_integration_wrap.cpp  gsl_integration_wrap.hpp  gsl_interp_wrap.hpp  gsl_minimize.hpp  gsl_qag_wrap.hpp  gsl_rng_wrap.hpp  gsl_vegas_wrap.cpp  gsl_vegas_wrap.hpp
c++/keldy/qrng_details/: digitalseq_b2g.hpp
c++/keldy/warpers/: identity.hpp  make_warper_from_proj.hpp  plasma.hpp  plasma_1D.hpp  plasma_projection.hpp  plasma_simple.hpp  plasma_uv.hpp  product_1d.hpp  product_1d_simple.hpp  projection.hpp  warpers.hpp  warpers_common.hpp
c++/triqs/arrays/blas_lapack/: getrs.hpp
c++/triqs/arrays/blas_lapack/f77/: cxx_interface.hpp
cmake/: FindCuba.cmake
doc/: CMakeLists.txt  about.rst  changelog.rst  conf.py.in  documentation.rst  index.rst  install.rst  issues.rst
doc/_templates/: sideb.html
notebooks/: Keldy-Impurity-OneBand-Plasma-Copy1.ipynb  Keldy-Impurity-OneBand-Plasma.ipynb  Keldy-Impurity-OneBand.ipynb  PlasmaSimpleTest.ipynb  RNGTest.ipynb  TRIQS-GF-Test.ipynb
python/keldy/: CMakeLists.txt  __init__.py  binner_desc.py  common_desc.py  cuba_interface_desc.py  gsl_vegas_wrap_desc.py  impurity_oneband_desc.py  impurity_oneband_module_desc.py  keldyrun.py  kernel_utility.py  parameters_cuba_common_param.rst  parameters_cuba_output.rst  parameters_cuba_suave_param.rst  parameters_cuba_vegas_param.rst  parameters_gsl_monte_vegas_params_wrap.rst  parameters_model_param_t.rst  toto_module_desc.py  version.py.in  visualization.py  warpers_desc.py
python/keldy/app4triqs/: app4triqs_module_desc.py
share/: CMakeLists.txt  keldy.modulefile.in  keldyvars.sh.in
share/cmake/: CMakeLists.txt  keldy-config-version.cmake.in  keldy-config.cmake.in
test/c++/: CMakeLists.txt  binner_test.cpp  contour_integral_test.cpp  grey_code_test.cpp  gsl_filter_gaussian_test.cpp  gsl_fit_linear_test.cpp  gsl_integration_test.cpp  gsl_minimize_test.cpp  gsl_qag_test.cpp  k_countour_pt.cpp  qrng_test.cpp  tests_std_containers.hpp  toto.cpp
test/c++/cuba_wrapper/: cuba_test.cpp
test/c++/gtest/googlemock/scripts/: fuse_gmock_files.py  upload.py
test/c++/gtest/googlemock/scripts/generator/cpp/: ast.py
test/c++/gtest/googletest/scripts/: upload.py
test/c++/gtest/googletest/test/: googletest-env-var-test.py  googletest-json-output-unittest.py  googletest-throw-on-failure-test.py  gtest_test_utils.py  gtest_xml_outfiles_test.py  gtest_xml_output_unittest.py  gtest_xml_test_utils.py
test/c++/impurity_oneband/: CMakeLists.txt  compute_obs_kernel_test.cpp  compute_obs_test.cpp  gsl_test.cpp  integrand_spin_plus_spin_minus_freq_test.cpp  kernel_binner_test.cpp  model_flatband_test.cpp  model_idx_test.cpp  model_semicircle_test.cpp  model_test.cpp  wick_direct_test.cpp  wick_direct_time_test.cpp  wick_kernel_single_omega_test.cpp  wick_kernel_test.cpp
test/c++/warpers/: product_1d_simple_interp_test.cpp  product_1d_simple_makers_test.cpp  product_1d_simple_test.cpp  product_1d_test.cpp  projection_test.cpp  warper_plasma_uv_test.cpp  warper_test.cpp  warper_tests_common.hpp  warper_train_test.cpp
test/python/: Basic.py  CMakeLists.txt  Toto.py  binner_test.py  chain.py  projection_test.py
